--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -122,7 +122,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textAlreadyHaveAccount"
+                android:id="@+id/textHaveNewAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
